Changes for Linux and Windows version 1.2.3:
--------------------------------------------------------------------
- Fixed support for MPEG 2.5 streams and files
- Windows release now uses Jean-Michel HERVE's x86 optimizations
- Added support for saving incoming SHOUTcast/HTTP streams to disk,
  (enabled by the "-save" command-line argument or the "SaveStreams"
  preference on Linux).  See the README for more information.
- Added an install-freeamp script for Linux

Changes for Linux version 1.2.2:
--------------------------------------------------------------------
- Incorporated x86 assembly MP3 decoder optimizations from
  "Jean-Michel HERVE" <tuo_stg@hotmail.com>

- Added support for a preferences file in ~/.freeamp_prefs
  The command-line properties are no longer supported.
  See the README for more information.

Changes for Windows version 1.2.1:
--------------------------------------------------------------------
- Fixed minimization bugs

Changes for Windows version 1.2:
--------------------------------------------------------------------
- All cool changes listed for Linux Below +

- Real Playlist Support

- Save playlists to your Rio

- Live in tray

- Pref Panel

Changes for Linux version 1.2:
--------------------------------------------------------------------
- Added assembly decoder optimizations, input and output buffering. FreeAmp
  should now be able to play audio uninterrupted, unless the load
  on the machine gets too great. FreeAmp is now much less processor 
  intensive, while consuming more memory.

- Added support for SHOUTcast, HTTP and RTP streaming. You can now specify
  a file, an http://, or a rtp:// on the command line. For more information
  on SHOUTcast, please see http://icecast.linuxpower.org or
  http://www.shoutcast.com

- Logging support. Using the Logging, LogInput, LogDecode properties
  the user can now log debug information and errors to the file freeamp.log.