@@ -18,7 +18,7 @@
         along with this program; if not, Write to the Free Software
         Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
         
-        $Id: AUTHORS,v 1.18 1999/07/13 18:41:57 robert Exp $
+        $Id: AUTHORS,v 1.19 1999/07/26 20:22:06 robert Exp $
 ____________________________________________________________________________*/
 
 FreeAmp (www.freeamp.org) is an Open Source development effort 
@@ -70,3 +70,6 @@ Other major contributors and their contributions:
 
 "Isaac Richards" <ijr@po.cwru.edu>
 * EsounD plug-in and warning clean-up
+
+"Skip Hansen" <shansen@earthlink.net>
+* HTTP numeric IP patch for Win93 OSR2 and Win NT
