@@ -18,7 +18,7 @@
         along with this program; if not, Write to the Free Software
         Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
         
-        $Id: player.cpp,v 1.130 1999/07/21 19:24:50 ijr Exp $
+        $Id: player.cpp,v 1.131 1999/07/26 20:22:14 robert Exp $
 ____________________________________________________________________________*/
 
 #include <iostream.h>
@@ -1549,6 +1549,7 @@ ServiceEvent(Event * pC)
            HandleMediaTimeInfo(pC);
            break;
 
+      case INFO_StreamInfo:
       case INFO_PlayListShuffle:
       case INFO_PlayListRepeat:
       case INFO_PlayListUpdated:
